# opencv_sample

./: CMakeLists.txt  README.md
01_article/00_camera_model/: CMakeLists.txt  README.md  camera_model.h  main.cpp
01_article/00_camera_model/image/: 00_camera_model.pptx
01_article/01_3d_reconstruction/: CMakeLists.txt  README.md  camera_model.h  depth_engine.cpp  main.cpp
01_article/01_3d_reconstruction/image/: 01_3D_reconstruction.pptx
common/: CMakeLists.txt  camera_model.h  common_helper_cv.cpp
curve_fitting/: CMakeLists.txt  main.cpp
distance_calculation/: CMakeLists.txt  main.cpp
dnn_depth_midas/: CMakeLists.txt  depth_engine.cpp  depth_engine.h  main.cpp
dnn_face/: CMakeLists.txt  face_detection.cpp  face_detection.h  main.cpp
projection_image_3d_to_2d/: CMakeLists.txt  main.cpp
projection_points_3d_to_2d/: CMakeLists.txt  main.cpp
reconstruction_depth_to_3d/: CMakeLists.txt  depth_engine.cpp  depth_engine.h  main.cpp  sample.ply
reconstruction_depth_to_3d/open3d/: create_point_cloud.py  read_point_cloud.py
resource/model/: midasv2_384x384.onnx.txt  midasv2_small_256x256.onnx.txt
transformation_homography/: CMakeLists.txt  main.cpp
transformation_topview_projection/: CMakeLists.txt  main.cpp
undistortion_calibration/: CMakeLists.txt  main.cpp
undistortion_manual_unified_projection/: CMakeLists.txt  main.cpp
